--- a/app/src/main/res/layout/activity_get_set_destination.xml
+++ b/app/src/main/res/layout/activity_get_set_destination.xml
@@ -20,6 +20,32 @@
         mapbox:layout_constraintStart_toEndOf="@+id/searchDest"
         mapbox:layout_constraintTop_toTopOf="parent" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="680dp"
+        android:orientation="horizontal"
+        mapbox:layout_constraintBottom_toBottomOf="parent"
+        mapbox:layout_constraintEnd_toEndOf="parent"
+        mapbox:layout_constraintStart_toStartOf="parent"
+        mapbox:layout_constraintTop_toTopOf="parent">
+
+        <Button
+            android:id="@+id/downloadButton"
+            android:layout_width="101dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Download" />
+
+        <Button
+            android:id="@+id/listButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="List" />
+
+    </LinearLayout>
+
     <com.mapbox.mapboxsdk.maps.MapView
         android:id="@+id/mapViewDestination"
         android:layout_width="match_parent"
@@ -33,7 +59,9 @@
         mapbox:layout_constraintVertical_bias="0.0"
         mapbox:mapbox_cameraTargetLat="37.7749"
         mapbox:mapbox_cameraTargetLng="-122.4194"
-        mapbox:mapbox_cameraZoom="12" />
+        mapbox:mapbox_cameraZoom="12" >
+
+    </com.mapbox.mapboxsdk.maps.MapView>
 
     <SearchView
         android:id="@+id/searchDest"
@@ -46,15 +74,8 @@
         mapbox:layout_constraintBottom_toTopOf="@+id/mapViewDestination"
         mapbox:layout_constraintEnd_toEndOf="parent"
         mapbox:layout_constraintStart_toStartOf="parent"
-        mapbox:layout_constraintTop_toTopOf="parent" />
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="25dp"
-        android:paddingLeft="25dp"
-        android:layout_gravity="center"
-        android:paddingRight="25dp"
-        android:visibility="gone"/>
+        mapbox:layout_constraintTop_toTopOf="parent" >
+
+    </SearchView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
