--- a/app/src/main/res/layout/activity_daily_commute_list.xml
+++ b/app/src/main/res/layout/activity_daily_commute_list.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activities.UserActivity">
+    tools:context=".ui.activities.DailyCommuteListActivity">
     <ImageView
         android:id="@+id/formLogo"
         android:layout_width="match_parent"
@@ -57,3 +58,4 @@
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
