--- a/app/src/main/res/layout/activity_peer_to_peer.xml
+++ b/app/src/main/res/layout/activity_peer_to_peer.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activities.FindActivity">
+    tools:context=".ui.activities.PeerToPeerActivity">
 
     <Button
         android:id="@+id/buttonDiscoverPeers"
