--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,11 +11,9 @@
     <ImageView
         android:id="@+id/formLogo"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="75dp"
         android:scaleType="fitCenter"
         app:srcCompat="@drawable/ic_jslogo"
-        android:layout_marginTop="25dp"
-        android:paddingTop="10dp"
         />
 
     <ScrollView
@@ -23,7 +21,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/formLogo"
-
         >
         <LinearLayout
             android:layout_width="match_parent"
@@ -41,9 +38,9 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:layout_marginBottom="5dp"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"
-                android:paddingTop="10dp"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
+                android:paddingTop="5dp"
                 />
             <TextView
                 android:layout_width="match_parent"
@@ -52,10 +49,9 @@
                 android:textColor="#14b48c"
                 android:textSize="15dp"
                 android:textStyle="bold"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="10dp"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
-                android:paddingBottom="15dp"
                 />
             <AutoCompleteTextView
                 android:layout_width="match_parent"
@@ -64,7 +60,7 @@
                 android:background="@drawable/rounded_white"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
-                android:drawableLeft="@drawable/ic_login"
+                android:drawableLeft="@drawable/ic_username"
                 android:textSize="14sp"
                 android:drawablePadding="5dp"
                 android:paddingStart="10dp"
@@ -74,15 +70,43 @@
             <AutoCompleteTextView
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:hint="Phone Number"
+                android:hint="First Name"
                 android:background="@drawable/rounded_white"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
-                android:drawableLeft="@drawable/ic_phone_number"
+                android:drawableLeft="@drawable/ic_name"
                 android:textSize="14sp"
                 android:drawablePadding="5dp"
                 android:paddingStart="10dp"
-                android:id="@+id/phoneNumber"
+                android:id="@+id/firstName"
+                android:layout_marginBottom="10dp"
+                />
+            <AutoCompleteTextView
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:hint="Last Name"
+                android:background="@drawable/rounded_white"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:drawableLeft="@drawable/ic_name"
+                android:textSize="14sp"
+                android:drawablePadding="5dp"
+                android:paddingStart="10dp"
+                android:id="@+id/lastName"
+                android:layout_marginBottom="10dp"
+                />
+            <AutoCompleteTextView
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:hint="Email Id"
+                android:background="@drawable/rounded_white"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:drawableLeft="@drawable/ic_email"
+                android:textSize="14sp"
+                android:drawablePadding="5dp"
+                android:paddingStart="10dp"
+                android:id="@+id/email_id"
                 android:layout_marginBottom="10dp"
                 />
             <AutoCompleteTextView
@@ -115,6 +139,21 @@
                 android:id="@+id/userCPassword"
                 android:layout_marginBottom="10dp"
                 />
+
+            <Spinner
+                android:id="@+id/spin"
+                android:entries="@array/Gender"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="@drawable/rounded_white"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:textSize="14sp"
+                android:drawablePadding="5dp"
+                android:paddingStart="10dp"
+                android:layout_marginBottom="10dp"
+                />
+
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -140,7 +179,8 @@
                 android:layout_marginBottom="10dp"
                 android:id="@+id/btnRegister"
                 />
-    </LinearLayout>
+
+        </LinearLayout>
 
     </ScrollView>
 
