--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -76,6 +76,7 @@
                     android:drawableLeft="@drawable/ic_username"
                     android:drawablePadding="5dp"
                     android:hint="User Name"
+                    android:text="@string/test_username"
                     android:paddingStart="10dp"
                     android:textSize="14sp" />
 
@@ -96,6 +97,7 @@
                         android:drawablePadding="5dp"
                         android:hint="Password"
                         android:inputType="textPassword"
+                        android:text="@string/password"
                         android:paddingStart="10dp"
                         android:textSize="14sp" />
 
