--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -111,12 +111,6 @@
 
                 </RelativeLayout>
 
-                <TextView
-                    android:id="@+id/regiserLink"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="New User" />
-
                 <Button
                     android:id="@+id/login"
                     android:layout_width="wrap_content"
@@ -130,6 +124,15 @@
                     android:text="Login"
                     android:textColor="@color/white"
                     android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/registerLink"
+                    android:layout_width="176dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="New User?"
+                    android:textAlignment="center"
+                    android:textColor="#003989" />
 
             </LinearLayout>
 
