Added Menu Bar with Jetpack architecture

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -20,11 +20,12 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toobar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSplitStyle"
+            android:layout_height="60dp"
             android:background="@color/colorAccent"
             android:elevation="4dp"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            />
 
         <FrameLayout
             android:id="@+id/fragment_container"
