--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,11 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="white">#ffffff</color>
+    <color name="red_color">#038B91</color>
+    <color name="cream">#EEDBC7</color>
+    <color name="yellowish_green">#D8BC0A</color>
+
+
+
+
 </resources>
