--- a/app/src/main/res/menu/draw_menu.xml
+++ b/app/src/main/res/menu/draw_menu.xml
@@ -15,6 +15,10 @@
             android:id="@+id/settings"
             android:icon="@drawable/ic_settings"
             android:title="@string/settings" />
+        <item
+            android:id="@+id/logout"
+            android:icon="@drawable/ic_logout"
+            android:title="@string/logout" />
 
     </group>
 </menu>
