--- a/app/src/main/res/menu/draw_menu.xml
+++ b/app/src/main/res/menu/draw_menu.xml
@@ -20,6 +20,10 @@
             android:icon="@drawable/ic_settings"
             android:title="@string/peer2peer" />
         <item
+            android:id="@+id/mapbox"
+            android:icon="@drawable/ic_settings"
+            android:title="Map" />
+        <item
             android:id="@+id/logout"
             android:icon="@drawable/ic_logout"
             android:title="@string/logout" />
