Room and userinfo changes

--- a/app/src/main/res/layout/activity_mapbox_input.xml
+++ b/app/src/main/res/layout/activity_mapbox_input.xml
@@ -70,7 +70,7 @@
             android:selectAllOnFocus="true"
             android:textStyle="bold"
             android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@+id/goToDestination"
+            app:layout_constraintBottom_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
