--- a/app/src/main/res/menu/draw_menu.xml
+++ b/app/src/main/res/menu/draw_menu.xml
@@ -28,5 +28,10 @@
             android:icon="@drawable/ic_logout"
             android:title="@string/logout" />
 
+        <item
+            android:id="@+id/tempdaily"
+            android:icon="@drawable/ic_logout"
+            android:title="tempdaily" />
+
     </group>
 </menu>
