--- a/app/src/main/res/layout/fragment_daily.xml
+++ b/app/src/main/res/layout/fragment_daily.xml
@@ -1,26 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <RelativeLayout
+<layout>
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/cream">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvDailyTrips"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fabNewTrip"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="40dp"
-            android:layout_marginEnd="20dp"
-            android:clickable="true"
-            android:src="@drawable/ic_add_white_30dp"
-            app:srcCompat="@color/colorAccent" />
+            android:layout_centerInParent="true"
+            android:text="Daily Fragment"
+            android:textSize="30sp" />
 
     </RelativeLayout>
 </layout>
