1. Size increase for new user button 2. Handling failure codes from login and register response

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -127,12 +127,13 @@
 
                 <TextView
                     android:id="@+id/registerLink"
-                    android:layout_width="176dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="246dp"
+                    android:layout_height="39dp"
                     android:layout_gravity="center"
                     android:text="New User?"
                     android:textAlignment="center"
-                    android:textColor="#003989" />
+                    android:textColor="#003989"
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
